--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figuras | Curso JS</title>
   </head>
@@ -12,17 +13,63 @@
       <section>
         <h2>Calcular el área y perímetro de un cuadrado</h2>
         <form action="">
-          <label for="InputCuadrado"
-            >Escribe cuánto mide cada lado de tu cuadrado:
-          </label>
-          <input id="inputCuadrado" type="number" />
-          <button type="button" onClick="calcularPerimetro()">
-            Calcular el perímetro
-          </button>
-          <button type="button" onClick="calcularPerimetro()">
-            Calcular el area
-          </button>
-          <p class="result"></p>
+          <fieldset class="fieldsetCuadrado">
+            <label for="InputCuadrado"
+              >Escribe cuánto mide cada lado de tu cuadrado:
+            </label>
+            <input id="inputCuadrado" type="number" />
+            <button type="button" class="perimetroCuadrado">
+              Calcular el perímetro
+            </button>
+            <button type="button" class="areaCuadrado">Calcular el area</button>
+            <p class="resultCuadrado"></p>
+          </fieldset>
+          <fieldset class="fieldsetTriangulo">
+            <label for="InputCuadrado"
+              >Escribe cuánto mide cada lado de tu triangulo:
+            </label>
+            <input
+              id="inputTriangulo1"
+              type="number"
+              placeholder="lado triangulo 1"
+            />
+            <input
+              id="inputTriangulo2"
+              type="number"
+              placeholder="lado triangulo 2"
+            />
+            <input
+              id="baseTriangulo"
+              type="number"
+              placeholder="base triangulo"
+            />
+            <input
+              id="alturaTriangle"
+              type="number"
+              placeholder="altura triangulo"
+            />
+            <button type="button" class="perimetroTriangulo">
+              Calcular el perímetro
+            </button>
+            <button type="button" class="areaTriangulo">
+              Calcular el area
+            </button>
+            <p class="resultTriangulo"></p>
+          </fieldset>
+          <fieldset class="fieldsetCirculo">
+            <label for="InputCirculo"
+              >Escribe cuánto mide el radio de tu circunferencia:
+            </label>
+            <input id="InputCirculo" type="number" />
+            <button type="button" class="diametroCirculo">
+              Calcular el diametro
+            </button>
+            <button type="button" class="perimetroCirculo">
+              Calcular el perímetro
+            </button>
+            <button type="button" class="areaCirculo">Calcular el area</button>
+            <p class="resultCirculo"></p>
+          </fieldset>
         </form>
       </section>
     </main>
