--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figuras | Curso JS</title>
   </head>
   <body>
-    <header><h1>Figuras geométricas</h1></header>
-    <main>
+    <header class="header"><h1 class="title1">Figuras geométricas</h1></header>
+    <main class="main">
+      <h2 class="title2">
+        ¡Calcula el perímetro y el área de tus figuras preferidas!
+      </h2>
       <section>
-        <h2>Calcular el área y perímetro de un cuadrado</h2>
-        <form action="">
+        <form action="" class="section1">
           <fieldset class="fieldsetCuadrado">
             <label for="InputCuadrado"
               >Escribe cuánto mide cada lado de tu cuadrado:
