--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <fieldset class="fieldsetCuadrado">
             <label for="InputCuadrado"
               >Escribe cuánto mide cada lado de tu cuadrado
-              <button type="button" class="reset">
+              <button type="button" class="reset reset-cuadrado">
                 <i class="fa-solid fa-trash"></i>
               </button>
             </label>
@@ -49,7 +49,7 @@
           <fieldset class="fieldsetTriangulo">
             <label for="InputCuadrado"
               >Escribe cuánto mide cada lado de tu triángulo
-              <button type="button" class="reset">
+              <button type="button" class="reset reset-triangulo">
                 <i class="fa-solid fa-trash"></i>
               </button>
             </label>
@@ -84,12 +84,12 @@
           <fieldset class="fieldsetCirculo">
             <label for="InputCirculo"
               >Escribe cuánto mide el radio de tu circunferencia
-              <button type="button" class="reset">
+              <button type="button" class="reset reset-circle">
                 <i class="fa-solid fa-trash"></i>
               </button>
             </label>
 
-            <input id="InputCirculo" type="number" />
+            <input id="inputCirculo" type="number" />
             <button type="button" class="diametroCirculo">
               Calcular el diametro
             </button>
